--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
-GOOGLE_EMAIL= herberthmeca@gmail.com
-GOOGLE_PASS= catkphsoglpqdykx
+GOOGLE_EMAIL=herberthmeca@gmail.com
+GOOGLE_PASS=catkphsoglpqdykx
