--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
-node_modules
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
 .env
+
+# Directories for test coverage reports
+coverage/
+
+# IDE specific files
+.idea/
+.vscode/
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
+*.swp
+
+# Ignore build directories
+build/
+dist/
+
+# Ignore public directory if you're generating files there
+public/
