--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "pg": "^8.12.0",
     "resend": "^3.5.0"
   }
 }
